# spinsim

./: .gitignore  CITATION.cff  LICENSE.rst  README.rst  example.py  full_algebra_example.py  gaussian_example.py  interpolator_example.py  pyproject.toml  qutip_example.py  scipy_example.py
article/: article.bbl  article.blg  article.tex  jors.cls  spinsim.bib
article/images/: architecture.pptx
bib/: spinsim.bib  vancouver.bst
docs/source/: CITATION.cff  about.architecture.rst  about.cuda_explanation.rst  about.examples.rst  about.motivation.rst  about.quality_control.rst  about.rst  about.use_potential.rst  conf.py  examples.rst  index.rst  modules.rst  requirements.txt  spinsim.rst  spinsim.utilities.rst  spinsim.utilities.scalar.rst  spinsim.utilities.spin_half.rst  spinsim.utilities.spin_one.rst
docs/source/_ext/: numbadoc.py
spinsim/: __init__.py  spinsim.py
spinsim/utilities/: __init__.py  scalar.py  spin_half.py  spin_one.py
spinsim/utilities_old/: __init__.py  scalar.py  spin_half.py  spin_one.py
