[tool.poetry]
name = "spinsim"
version = "0.1.0"
description = ""
license = "BSD-3-Clause"
authors = ["Alexander Tritt <alexander.tritt@monash.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
numba = "==0.50.1"
numpy = "==1.18.5"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
